# crampon

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
ci/: requirements-py36-all-rc.yml  requirements-py36-all.yml  requirements-py36-oggm-dev.yml  requirements-py36-xarray-dev.yml  requirements-py38-all-rc.yml  requirements-py38-all.yml  requirements-py38-oggm-dev.yml  requirements-py38-xarray-dev.yml  requirements-py39-all-rc.yml  requirements-py39-all.yml  requirements-py39-oggm-dev.yml  requirements-py39-xarray-dev.yml
core/: validation.py
crampon/: __init__.py  cfg.py  graphics.py  params.cfg  tasks.py  utils.py  workflow.py
crampon/core/: holfuytools.py
crampon/tests/: __init__.py  funcs.py  test_graphics.py  test_models.py  test_prepro.py  test_utils.py  test_workflow.py
data/results_prelim/: mustar_from_mauro_first_attempt_brute.csv
docs/: Makefile  camera-massbalances.rst  crampon.rst  crampon.tests.rst  data-sources.rst  index.rst  input-uncertainty.rst  massbalance-ensemble.rst  modules.rst  particle-filter.rst  pitfalls.rst  potential-irradiation.rst  sandbox.rst  satellite-albedo.rst  satellite-snowlines.rst
operational/: climatology_from_daily.py  cronjobs.py  mb_production.py
sandbox/: CH_params.cfg  MB_for_firn_cali.ipynb  compare_geosatclim_versions.py  ipot_toposhade.py  iterative_script_without_known_mb.py  mb_height_offline.py  params_aaron.cfg  run_all.py  run_switzerland.py  run_testglaciers.py  testglaciers_params.cfg  validation.py
scripts/: compare_LFI_DEM.py  compare_holfuy_readings.py
(+764 files in other folders)
