[tool.poetry]
name = "crampon"
version = "0.1.0"
description = "Cryospheric Monitoring and Prediction Online"
authors = ["Johannes Landmann <j_landmann@gmx.de>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "^1.5.2"
geopandas = "^0.12.2"
salem = "*"
oggm = {git = "https://github.com/OGGM/oggm.git"}
matplotlib = "^3.6.3"
pyproj = "^3.4.1"
netCDF4 = "^1.6.2"
scipy = "*"
paramiko = "^2.12.0"
joblib = "^1.2.0"
six = "^1.16.0"
Pillow = "^9.4.0"
shapely = "^2.0.0"
rasterio = "^1.3.4"
configobj = "^5.0.6"
xarray = "^2022.12.0"
schedule = "^1.1.0"
python-dateutil = "*"

[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.2.0"
folium = "^0.14.0"
branca = "^0.6.0"
mpld3 = "^0.5.9"
pysolar = "^0.10"
numba = "*"
descartes = "^1.1.0"
filterpy = "^1.4.5"
properscoring = "^0.1"
bokeh = "^3.0.3"
dask = "^2023.1.0"
Cartopy = "^0.21.1"
pytest = "^7.2.1"
motionless = "^1.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
